# fastapi-elm-tailwind-techstack

./: .gitignore  .gitmodules  Makefile  README.md  api.py  github-workflow-test.yaml  main.py  mypy.ini  pyproject.toml  tmux_conf.sh
api/: user_routes.py
app/: .gitignore  README.md  elm.json  index.html  index.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tailwind.css  vite.config.ts
app/src/: Actions.elm  Api.elm  Main.elm  Ports.elm  Route.elm  ToastMessages.elm  Types.elm  Utils.elm
app/src/UI/: Button.elm  Card.elm  Common.elm  Dialog.elm  DropdownMenu.elm  Icons.elm  NavigationMenu.elm  Progress.elm  Table.elm  Tabs.elm  Tooltip.elm
app/tests/: TestSample.elm
lib/: types.py
templates/: index.html
